tests/error/tracing_errors/call_python2.py
from guppylang import guppy

@guppy.enum
class Enum:
    VariantA = {"x": int}

Enum.VariantA(1)
